# BGDJam2022

./: CMakeLists.txt  attributions.txt  readme.txt
resources/bgm/: i_have_a_vision.xm  where_visions_overlap.xm
resources/fonts/: m3x6.fnt  m5x7.fnt
resources/maps/: map.json
src/: CMakeLists.txt  chest.c  chest.h  chests.c  chests.h  constants.h  crate.c  crate.h  global_resources.c  global_resources.h  hud.c  hud.h  main.c  player.c  player.h
src/core/: gameloop.c  gameloop.h  sprite.c  sprite.h  tween.c  tween.h
src/state/: state.c  state.h  state_main.c  state_main.h  state_menu.c  state_menu.h  state_splash.c  state_splash.h
src/util/: formatter.c  formatter.h  list.c  list.h
